# wayback-machine-website-downloader

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  example-config.toml  pyproject.toml  test_wayback_mirror.py  wayback_mirror.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/wayback_machine_downloader/: __init__.py  cdx.py  cli.py  config.py  discovery.py  http.py  mirror.py  models.py  paths.py  reports.py  rewrite.py  selection.py  state.py  warc.py
tests/: test_cdx_state_warc.py  test_core.py  test_mirror_pipeline.py
