[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wayback-machine-website-downloader"
version = "1.5.0"
description = "Dependency-free CDX-first Wayback Machine website reconstruction"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CreepsoOff" }]
keywords = ["wayback-machine", "internet-archive", "website-downloader", "web-archiving", "cdx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
# Reserved extension point for the V2 Playwright provider. Intentionally empty in V1.5.
browser = []
dev = ["build>=1.2"]

[project.urls]
Homepage = "https://github.com/CreepsoOff/wayback-machine-website-downloader"
Repository = "https://github.com/CreepsoOff/wayback-machine-website-downloader"
Issues = "https://github.com/CreepsoOff/wayback-machine-website-downloader/issues"

[project.scripts]
wayback-machine-downloader = "wayback_machine_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wayback_machine_downloader = ["py.typed"]
